# repo

./: AGENTS.md  PROJECT_ROADMAP.md  README.md  WORLD_VERIFICATION_REPORT.md
docs/: .env.civitai  .env.runpod.example  AGENTS.md  CHANGELOG.md  CODING_GUIDELINES.md  COMPLETE_TECHNICAL_SPECIFICATION.md  DIRECTOR_OF_PHOTOGRAPHY.md  EVENT_SYSTEM_SPEC.md  EVENT_SYSTEM_UPDATE_LOG.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INSTRUCTOR_INTEGRATION.md  LLM_CONTEXT_ANALYSIS.md  LLM_CONTEXT_COMPLETE.md  LLM_CONTEXT_SPEC.md  MULTI_NPC_SYSTEM.md  NARRATIVE_SYSTEMS_GUIDE.md  PERSONALITY_SYSTEM.md  PHASE_SYSTEM_V42.md  PROJECT_ROADMAP.md  QUEST_CHOICE_SYSTEM.md  QUEST_IMPLEMENTATION_SUMMARY.md  QUEST_SPECIFICATION.md  README.md  RUNPOD_DAILY_STARTUP.md.bak  RUNPOD_SETUP.md  RUNPOD_SETUP_GUIDE.md  V4_5_REMOTE_COMMUNICATION_SYSTEM.md  WORLD_CREATION_GUIDE.md  docs.rar  pyproject.toml  restore_runpod_v4.sh
luna/: __main__.py  avvio comfyui.txt
luna/ai/: __init__.py  base.py  content_guidelines.py  gemini.py  guardrails.py  json_repair.py  llm_instructor.py  manager.py  mock.py  moonshot.py  personality_analyzer.py  personality_instructor.py  prompts.py  retry_decorator.py
luna/config/: __init__.py  models.yaml
luna/core/: __init__.py  config.py  database.py  debug_tracer.py  engine.py  event_context_builder.py  logging_config.py  models.py  prompt_builder.py  state.py  story_director.py
luna/media/: __init__.py  aspect_ratio_director.py  audio_client.py  builders.py  comfy_client.py  lora_mapping.py  pipeline.py  sd_webui_client.py  video_client.py
luna/systems/: __init__.py  activity_system.py  affinity_calculator.py  companion_locator.py  dynamic_events.py  event_validator.py  gameplay_manager.py  global_events.py  initiative_system.py  input_preprocessor.py  intro.py  invitation_manager.py  location.py  media_coordinator.py  memory.py  movement.py  npc_detector.py  outfit_modifier.py  outfit_renderer.py  personality.py  phase_manager.py  pose_extractor.py  quests.py  remote_communication.py  response_processor.py  schedule_manager.py  situational_interventions.py  state_memory.py  state_updater.py  time_manager.py  turn_orchestrator.py  world.py
luna/systems/gameplay/: __init__.py  affinity.py  base.py  clues.py  combat.py  economy.py  inventory.py  morality.py  reputation.py  skills.py  survival.py
luna/systems/multi_npc/: __init__.py  dialogue_sequence.py  interaction_rules.py  manager.py
luna/ui/: __init__.py  action_bar.py  app.py  companion_locator_widget.py  debug_panel.py  feedback_visualizer.py  image_viewer.py  main_window.py  quest_choice_widget.py  save_dialog.py  startup_dialog.py  video_dialog.py  widgets.py
worlds/prehistoric_tribe/: _meta.yaml  companion_schedules.yaml  daily_events.yaml  global_events.yaml  kara.yaml  locations.yaml  naya.yaml  random_events.yaml  zara.yaml
worlds/school_life_complete/: _meta.yaml  companion_schedules.yaml  daily_events.yaml  global_events.yaml  locations.yaml  luna.yaml  maria.yaml  npc_templates.yaml  random_events.yaml  stella.yaml  time.yaml
