[tool.poetry]
name = "luna-rpg-v4"
version = "4.0.0"
description = "Visual Novel/RPG AI-driven with quest system and personality engine"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "luna", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# Core UI
pyside6 = "^6.6.0"
qasync = "^0.27.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
alembic = "^1.13.0"

# Data validation & settings
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Async HTTP
httpx = {extras = ["http2"], version = "^0.26.0"}
aiohttp = "^3.9.0"
aiofiles = "^23.2.0"

# AI Providers
google-genai = "^1.0.0"  # New official Google SDK
openai = "^1.6.0"

# YAML parsing
pyyaml = "^6.0.1"

# Utilities
tenacity = "^8.2.0"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"

# Audio
pygame = "^2.5.0"

# Optional: Semantic Memory (uncomment to enable)
# chromadb = "^0.5.0"
# sentence-transformers = "^3.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-qt = "^4.2.0"
pytest-cov = "^4.1.0"

# Code quality
ruff = "^0.1.9"
mypy = "^1.7.0"

# Type stubs
types-pyyaml = "^6.0.0"

[tool.poetry.scripts]
luna = "luna.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["luna"]

# =============================================================================
# MYPY - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

# Per librerie senza stubs
[[tool.mypy.overrides]]
module = [
    "qasync.*",
    "google.generativeai.*",
    "pygame.*",
    "aiofiles.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
qt_api = "pyside6"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=luna",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests as UI tests requiring display",
    "llm: marks tests requiring LLM API access",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src/luna"]
omit = [
    "*/tests/*",
    "*/test_*",
    "src/luna/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# LUNA RPG - Game Settings
# =============================================================================
[tool.luna]
version = "4.0.0"
min_python = "3.12"
default_world = "school_life"
max_history = 50
